added RuleParser and StructureRewriter testing